styles/main.css
@import url("https://fonts.googleapis.com/css2?family=Varela+Round&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100;200;300;400;500;600;700;800;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");

html {
    box-sizing: border-box;
    scroll-behavior: smooth;
}

body {
    --bg: #3f485e;
    --headerbg: #26324d;
    --footerbg: #26324d;
    --fontcolor: #FFFFFF;
    background-color: var(--bg);
    height: 100%;
}


header {
    position: fixed;
    top: 0; 
    width: 100%;
    height: auto;
    display: flex;
    padding: 1em 0;
    flex-direction: row;
    align-items: center;
    justify-content: space-around;
    font-family: "Roboto Slab", serif;    
    color: var(--fontcolor);
    background-color: var(--headerbg);
    z-index: 1;
}

header h1 {
    font-weight: 400;
    font-size: 40px;
    padding-left: 20px;
   
}

nav {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;    
}

nav button {
    font-family: "Roboto Slab", serif;
    font-size: 20px;
    width: 120px;
    margin: 10px;
    color: var(--fontcolor);
    background-color: var(--headerbg) ;
    border: none;
    cursor: pointer;
}

.articlecontainer {
    position: relative;    
    height: 100%;  
    margin-top: 100px;

}

#home {
    position: absolute;
    top: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 90%;
    padding: 20px 5px;
    border-top: 2px solid var(--fontcolor);
    border-bottom: 2px solid var(--fontcolor);
    color: var(--fontcolor);
    font-family: "Open Sans";
    font-weight: 300;

    left: 0;
    right: 0;
    margin: auto;
}

#home h2 {
    margin: 5px;
    text-align: center;
    font-size: 35px;
    font-weight: 400;
}

#home p {
    max-width: 750px;
    margin: 10px;
    font-size: 25px;
    line-height: 1.5em;
}

.images {
    display: flex;
}

.images img {
    width: 75px;
    margin: 1px 20px;
}


#projects {
    position: absolute;
    top: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 90%;
    padding: 40px 5px;
    border-top: 2px solid var(--fontcolor);
    border-bottom: 2px solid var(--fontcolor);
    color: var(--fontcolor);
    font-family: "Open Sans";
    font-size: 18px;
    font-weight: 300;

    left: 0;
    right: 0;
    margin: auto;
}

#projects h2 {
    font-size: 25px;
    font-weight: 400;
}

#projects div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: end;
    height: 80px;
    width: 370px;
    margin-top: 40px;
    padding-left: 0;
    background-color: var(--headerbg);
    border-radius: 5px;
}

#projects img {
    width: 70px;
}

#projects a:link, a:visited {
    margin-left: 20px;
    text-decoration: none;
    color: (var(--fontcolor))
}

#contact {
    position: absolute;
    top: 0;

    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 90%;
    padding: 40px 5px;
    border-top: 2px solid var(--fontcolor);
    border-bottom: 2px solid var(--fontcolor);
    color: var(--fontcolor);
    font-family: "Open Sans";
    font-size: 18px;
    font-weight: 300;

    left: 0;
    right: 0;
    margin: auto; 
}

#contact h2 {
    font-size: 25px;
    font-weight: 400;
}

#contact div {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: end;
    height: 80px;
    width: 370px;
    margin-top: 40px;
    padding-left: 0;
    background-color: var(--headerbg);
    border-radius: 5px;
}

#contact img {
    width: 75px;
}

#contact a:link, a:visited {
    margin-left: 20px;
    text-decoration: none;
    color: (var(--fontcolor))
}

.hidden {
    visibility: hidden;
}

@media (max-width: 768px)
{
    .articlecontainer {
        margin-top: 200px;
    }

    nav {
        flex-direction: column;
    }
}

